agrege elementos al footer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     </main>
 
     <footer>
+        <ul>
+            <li>Contacto</li>
+            <li>Acerca de</li>
+            <li>Redes sociales</li>
+            <li>Politica de privacidad</li>
+            <li>Avisos legales</li>
+        </ul>
 
     </footer>
     
