cambios nuevos para mi rama de cabecera que no se veran en el principal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>esta es mi pagina web</h1>
+        <h1>Esta es mi Pagina WEB</h1>
     </header>
 
     <main>
