header terminado, y agregados otros cambios nuevos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title> Bienvenidos a Hyperblog 2.0</title>
 </head>
 <body>
-    <header>
-        <h1>Esta es mi Pagina WEB</h1>
+    <header >
+        <h1 class="header">Bienvenidos a Hyperblog</h1>
+
+        <nav class="encabezado">
+            <lu class="lista_del_encaezado">
+                <li class="items_encabezado">Home</li>
+                <li class="items_encabezado">Acerca de</li>
+                <li class="items_encabezado">Portafolio</li>
+                <li class="items_encabezado">ajustes</li>
+                <li class="items_encabezado">Contactanos</li>
+            </lu>
+        </nav>
     </header>
 
     <main>
