cambio estupido hecho con el fin de complicarme la vida

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>El Volkswagen Escarabajo</h2>
 
         <p>
-            Un simpático automóvil que parece sonreír a todos los transeúntes, comenzó su vida como un proyecto ambicioso en la Alemania de los años 30. Diseñado por Ferdinand Porsche y promovido por Adolf Hitler, buscaba ser el coche del pueblo, accesible y económico. A lo largo de los años, se convirtió en un ícono cultural, adorado por hippies y coleccionistas por igual. Su producción en masa cesó en 2003, pero su legado continúa, como una cápsula del tiempo sobre ruedas que nos recuerda que incluso los coches pueden tener nueve vidas.
+            Un simpático automóvil que parece sonreír a todos los transeúntes, comenzó su vida como un proyecto ambicioso en la Alemania de los años 30. Diseñado por Ferdinand Porsche y promovido por Adolf Hitler, buscaba ser el coche del pueblo, accesible y económico. A lo largo de los años, se convirtió en un ícono cultural, deseado por hippies y coleccionistas por igual. Su producción en masa cesó en 2003, pero su legado continúa, como una cápsula del tiempo sobre ruedas que nos recuerda que incluso los coches pueden tener nueve vidas.
         </p>
 
     </main>
