cambio en el titulo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stile.css">
-    <title> Volkswagen Escarabajo </title>
-</head>
+    <title> Volkswagen Escarabajo (el auto del pueblo) </title>
+</head> 
 <body>
     <header >
         <h1 class="header">Bienvenidos a Hyperblog</h1>
