agrege imagenes al blog

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head> 
 <body>
     <header >
+        <img src="imagenes/Volkswagen_logo_2019.png" alt="logo de wolkswagen" class="logo">
+        
         <h1 class="header">Bienvenidos a Hyperblog</h1>
 
         <nav class="encabezado">
@@ -28,6 +30,9 @@
             Un simpático automóvil que parece sonreír a todos los transeúntes, comenzó su vida como un proyecto ambicioso en la Alemania de los años 30. Diseñado por Ferdinand Porsche y promovido por Adolf Hitler, buscaba ser el coche del pueblo, accesible y económico. A lo largo de los años, se convirtió en un ícono cultural, deseado por hippies y coleccionistas por igual. Su producción en masa cesó en 2003, pero su legado continúa, como una cápsula del tiempo sobre ruedas que nos recuerda que incluso los coches pueden tener nueve vidas.
         </p>
 
+        <div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/VW_1302_%282013-09-15_2307_Spu%29.JPG" alt="imagen de un Volkswagen Escarabajo">
+        </div>
     </main>
 
     <footer>
