--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> 
 <body>
     <header >
-        <img src="imagenes/Volkswagen_logo_2019.png" alt="logo de wolkswagen" class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Volkswagen_logo_2019.svg" alt="logo de wolkswagen" class="logo">
         
         <h1 class="header">Bienvenidos a Hyperblog</h1>
 
@@ -31,7 +31,7 @@
         </p>
 
         <div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/VW_1302_%282013-09-15_2307_Spu%29.JPG" alt="imagen de un Volkswagen Escarabajo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/VW_1302_%282013-09-15_2307_Spu%29.JPG/1024px-VW_1302_%282013-09-15_2307_Spu%29.JPG" alt="imagen de un Volkswagen Escarabajo">
         </div>
     </main>
 
